--- a/src/ConnectWallet/Styles.css
+++ b/src/ConnectWallet/Styles.css
@@ -3,6 +3,6 @@
     justify-content: flex-start;;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     margin-top: 100px;
 }
